# assembler

./: Main.hs  README.md  assembler  assembler.cabal  instructions.txt  stack.yaml
src/: Inst.hs  Lexer.x  Parser.hs  Parser.y  Types.hs  WriteBin.hs  WriteTxt.hs
test/: Common.hs  ML.hs  Spec.hs  Unit.hs  ack.bin.txt  ack.s  adder.bin.txt  adder.s  cls-bug.bin.txt  cls-bug.s  cls-bug2.bin.txt  cls-bug2.s  cls-rec.bin.txt  cls-rec.s  cls-reg-bug.bin.txt  cls-reg-bug.s  even-odd.bin.txt  even-odd.s  fib.bin.txt  fib.s  funcomp.bin.txt  funcomp.s  inprod-loop.bin.txt  inprod-loop.s  inprod-rec.bin.txt  inprod-rec.s  inprod.bin.txt  inprod.s  join-reg.bin.txt  join-reg.s  join-reg2.bin.txt  join-reg2.s  join-stack.bin.txt  join-stack.s  join-stack2.bin.txt  join-stack2.s  join-stack3.bin.txt  join-stack3.s  matmul-flat.bin.txt  matmul-flat.s  (+16 more)
test/tmp/: min-caml-hs.bin.txt  min-caml-hs.ml  min-caml-hs.s
